--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <html>
 <head>
-<title>
-
-  My awesome website
-
-</title>
+<title>My awesome website</title>
 </head>
 
-   <body>
+ <body>
 
      Hello there, awesome person!
 
