--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
  <body>
 <h1>
+<img
+src="https://avatars.githubusercontent.com/u/94951942?v=4">
+
      Hello there, awesome person!
 </h1>
    </body>
