--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 </head>
 <body>
 <img src="https://avatars.githubusercontent.com/u/94951942?v=4">
+<ol>
+    <li>This</li>
+
+    <li>Is an</li>
+
+    <li>Ordered list</li>
+
+</ol>
 <h1>
      Hello there, awesome person!
 </h1>
