--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <li>Ordered list</li>
 
 </ol>
+<li>Is an</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
+
 <h1>
      Hello there, awesome person!
 </h1>
